fix lastest new mark on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,7 +390,7 @@ a{
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
-   margin-left: 35px;
+   margin-left: 20px;
 }
 /* feature job */
 
@@ -651,6 +651,11 @@ a{
    }
    .content{
       height: 100vh;
+   }
+
+   .lastest-new-mark::before,
+   .lastest-new-mark::after{
+      top: 100%;
    }
 }
 
